--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Software to decode FST files and convert them to ASCII.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>FST Decoder</title>
+    <title>FST/KC3 Decoder</title>
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <link rel="manifest" href="./manifest.json">
     <script>
@@ -50,7 +50,7 @@
         <!--Header-->
         <div class="card bg-dark text-white">
             <div class="card-header">
-                FST Decoder v1.0.1
+                FST/KC3 Decoder v1.0.2
             </div>
         </div>
         <!--Busy-->
@@ -192,14 +192,14 @@
             <div class="card">
                 <div class="card-header">
                     <a class="btn btn-secondary" data-bs-toggle="collapse" href="#collapseMenu">
-                        Import FST job file
+                        Import FST/KC3 job file
                     </a>
                 </div>
                 <div id="collapseMenu" class="collapse">
                     <div class="card-body">
                         <div class="input-group mb-3">
                             <input type="file" class="form-control" id="fileOpenJob" aria-describedby=""
-                                aria-label="Upload" accept=".fst">
+                                aria-label="Upload" accept=".fst,.kc3">
                         </div>
                     </div>
                     <div class="card-footer">
@@ -398,7 +398,8 @@
                 downloadData = new Uint8Array(contents);
                 fileDownloadName = jobFile.name;
                 if (downloadData !== null) {
-                    if (fileDownloadName.endsWith('.FST')) {
+                    if (fileDownloadName.endsWith('.FST') || fileDownloadName.endsWith('.KC3')) {
+                        fileIsKC3 = fileDownloadName.endsWith('.KC3');
                         log('Parsing ' + fileDownloadName);
                         await parseExportJob(downloadData);
                     }
@@ -414,10 +415,11 @@
 
         const FILE_HEADER_SIZE = 2048;
         let downloadData = null;
-        let fileUploadName = null;
+        let fileIsKC3 = false;
         let jobConfigData = {
             gaugeSN: "",
             selectedHW: "",
+            fixedRate: 30,
             pressTrigStart: 30,
             pressTrigStop: 0,
             createJob: 0,
@@ -446,6 +448,7 @@
                 //#region Parse header.
                 jobConfigData.gaugeSN = String.fromCharCode.apply(null, value.slice(38, 41));
                 jobConfigData.selectedHW = String.fromCharCode.apply(null, value.slice(64, 69));
+                jobConfigData.fixedRate = parseInt(String.fromCharCode.apply(null, value.slice(199, 204)));
                 jobConfigData.pressTrigStart = parseInt(String.fromCharCode.apply(null, value.slice(231, 236)));
                 jobConfigData.pressTrigStop = parseInt(String.fromCharCode.apply(null, value.slice(262, 267)));
                 jobConfigData.createJob = parseInt(String.fromCharCode.apply(null, value.slice(282, 283)));
@@ -488,6 +491,7 @@
                 let timeSet = false;
                 let sampleTime = (new Date()).getTime();
                 let progressUpdate = 65536;
+                let varCount = 0;
                 for (let i = (FILE_HEADER_SIZE); i < value.length; i += 8) {
                     switch (value[i + 7] % 16) {
                         case 10: // Normal sample
@@ -500,7 +504,24 @@
                                 let tempValue = calibrateTemperateure(rawPress, rawTemp);
 
                                 jobData.push({ timeMs, pressValue, tempValue });
-                                sampleTime += jobConfigData.fastRate;
+                                if (fileIsKC3) {
+                                    varCount = 10;
+                                    let l = 0;
+                                    for (let j = 0; j < 10; j++) {
+                                        l += jobConfigData.varDur[9 - j];
+                                        if (jobConfigData.varDur[9 - j] !== 0) {
+                                            varCount = 9 - j;
+                                        }
+                                    }
+                                    if((varCount === 10) || (l === 1)) {
+                                        sampleTime += (jobConfigData.fixedRate * 1000);
+                                    } else {
+                                        sampleTime += (jobConfigData.varRate[varCount] * 1000);
+                                        jobConfigData.varDur[varCount]--;
+                                    }
+                                } else {
+                                    sampleTime += jobConfigData.fastRate;
+                                }
                             }
                             break;
                         case 5: // Time sample
